Update to Spring Boot 4.0.6